# render-python

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.base  LICENSE  README.md  README.rst  add_downsample_to_render_project.py  apply_TEM2_to_render_stack.py  apply_alignment_from_render_stack.py  apply_alignment_transforms_to_otherStacks2.ipynb  apply_ztransforms_to_render_stack.py  create_mipmaps.py  detect_and_drop_stitching_mistakes.py  docker-compose.yml  docker_base_setup.sh  docker_setup.sh  other_setup.py  pyproject.toml  remove_outer_tiles.py  renderapi.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  test_requirements.txt  tilespec.py  tox.ini
.github/workflows/: release_publish.yml
.travis/: merge_script.sh  travis.yml
docs/: Makefile  conf.py  index.rst
docs/api/: modules.rst  renderapi.external.processpools.rst  renderapi.external.rst  renderapi.rst
docs/examples/: add_downsample_to_render_project.py  apply_alignment_from_render_stack.py  apply_alignment_transforms_to_otherStacks2.ipynb  create_mipmaps.py
docs/guide/: index.rst  pointmatchassumptions.rst
integration_tests/: test_client_integrated.py  test_coordinate.py  test_coordinate_integrated.py  test_data.py  test_image_open.py  test_multichannel.py  test_pointmatch_integrated.py  test_stack.py  test_stack_integrated.py
integration_tests/test_files/: test_2_channels.json
render-client-jar/: import_json.sh  run_ws_client.sh  setup_java_env.sh
renderapi/: __init__.py  channel.py  client.py  coordinate.py  errors.py  image.py  image_open.py  image_pyramid.py  layout.py  msgspec_json.py  pointmatch.py  render.py  renderapi.py  resolvedtiles.py  stack.py  tilespec.py  transform.py  utils.py
renderapi/client/: __init__.py  client.py  client_calls.py  params.py  utils.py
renderapi/transform/: AffineModels.py  PolynomialModels.py  ThinPlateSpline.py  __init__.py  utils.py  (+1 more)
scripts/: setup_java_env.sh
test/: rendersettings.py  requirements.txt  test_channel.py  test_client.py  test_imagepyramid.py  test_pointmatch.py  test_resolvedtiles.py  test_stack.py  test_tilespec.py  test_transform.py  test_utils.py
(+21 files in other folders)
