[project]
name = "render-python"
description = "python API client to interact with render databases (see https://github.com/saalfeldlab/render)"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Forrest Collman"},
  {name = "Russel Torres"},
  {name = "Eric Perlman"},
  {name = "Sharmi Seshamani"}
]
maintainers = [
  {name = "Russel Torres"}
]
requires-python = ">3.8,<3.12"
dynamic = ["version"]
dependencies = [
    "requests",
    "scipy",
    "numpy",
    "pillow",
    "sphinxcontrib-napoleon",
    "decorator",
    "six"
]

[project.urls]
Repository = "https://github.com/AllenInstitute/render-python.git"

[project.optional-dependencies]
test = [
    "coverage>=4.1",
    "mock>=2.0.0",
    "pep8>=1.7.0",
    # "pytest>4.6,<5.0",
    "pytest",
    "pytest-cov>=2.2.1",
    "pytest-pep8>=1.0.6",
    "pytest-xdist>=1.14",
    "flake8>=3.0.4",
    "pylint>=1.5.4",
    "jinja2",
    "ujson"
]
pypi-build = [
    "build",
    "twine"
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "renderapi"
]

[tool.setuptools_scm]
version_file = "renderapi/_version.py"

# some downgrades from pixi's expectations
[tool.pixi.system-requirements]
linux = "5.0.0"
libc = "2.27"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
render-python = { path = ".", editable = true }

# conda-enabled features
[tool.pixi.feature.pixi-base.dependencies]
numpy = "*"
scipy = "*"

[tool.pixi.environments]
test = ["test"]
conda = ["pixi-base"]
conda-test = ["pixi-base", "test"]
build = ["pypi-build"]

[tool.coverage.run]
omit = ["integration_tests/*", "test/*"]

[tool.pixi.feature.test.tasks]
test = "pytest  --cov --cov-report=xml --junitxml=test-reports/test.xml"

[tool.pixi.feature.pypi-build.tasks]
pypi-build = "python -m build"
pypi-test-upload = "python -m twine upload --repository testpypi dist/*"
pypi-test-deploy = "python -m build && python -m twine upload --repository testpypi dist/*"
